--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: pwa_converter
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.4.3 <4.0.0'
+  sdk: ">=3.4.3 <4.0.0"
 
 dependencies:
   flutter:
@@ -14,11 +14,19 @@ dependencies:
   cupertino_icons: ^1.0.6
   http: ^1.2.2
   get_it: ^8.0.0
+  freezed_annotation: ^2.4.4
+  json_annotation: ^4.9.0
+  freezed: ^2.5.2
+  built_value: ^8.9.2
+  built_collection: ^5.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  build_runner: ^2.4.6
+  json_serializable: ^6.8.0
+  built_value_generator: ^8.3.3
 
 flutter:
   uses-material-design: true
